<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Calories -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_calories"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edit_calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/label_calories"/>

    <!-- Sugar -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_sugar"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edit_sugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/label_sugar"/>

    <!-- Sodium -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_sodium"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edit_sodium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/label_sodium"/>

    <!-- Fat -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_fat"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edit_fat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/label_fat"/>

    <!-- Protein -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_protein"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edit_protein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/label_protein"/>

</LinearLayout>