<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Height Label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_height"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <!-- Height Edit Text -->
    <EditText
        android:id="@+id/edit_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/label_height"/>

    <!-- Weight Label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_weight"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <!-- Weight Edit Text -->
    <EditText
        android:id="@+id/edit_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/label_weight"/>

    <!-- Sex Label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_sex"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <!-- Sex Spinner -->
    <Spinner
        android:id="@+id/edit_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sex_options" />

</LinearLayout>